--- a/tools/ELORank/.classpath
+++ b/tools/ELORank/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/BigDataLib/deps/gson-2.3.1.jar"/>
 	<classpathentry kind="lib" path="/BigDataLib/deps/commons-io-2.4/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="/BigDataLib/deps/commons-csv-1.4/commons-csv-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
